ros2_ws/log/build_2025-02-22_18-17-00/sambergeni_controller/stderr.log
  File "/home/sambergeni/ros2_ws/install/sambergeni_controller/lib/python3.10/site-packages/sambergeni_controller/testing3.py", line 6
    from __future__ import division
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file

